VERSION: 0.5.1

Known issues:
- Poor code coverage of the PicasaService.
- Poor code coverage of controllers and domain classes.

Potential improvements:
- Seperate comment posting to seperate service to allow main service to be stateless.
- Option for Grid Listing.
- Wiki details on how to make best use of UI.
- Wiki API reference.
- Further feed caching.
- Potential switch to jQuery for UI.

Release notes 0.5.1 (TBA)
- Grails update to 1.3.3.
- Comment listing by default shows last page.

Release notes 0.5.0 (5th July, 2010)
- Grails update to 1.3.2.
- Introduction of dependency on OAuth plug-in version 0.4.
- Controller "elvis" clean up.
- Domain class comment clean up.
- Introduction of most recent comment listing.
- Footer output update.
- URL mappings update to provide feeds for comment listing.
- README update to detail new URL mappings. 
- Small CSS tweaks.
- Rename of CSS file to grails-picasa.
- Removal of RCU from controllers.
- Comment views refactor.
- Update PicasaService to non transactional.
- Ability to post a photo comment through OAuth.
- Tags now contain "weight" property.
- Ajax improvements for the post comment UI.
- URL mappings update.

Release notes 0.4.5 (1st June, 2010)
- Further PicasaService code coverage. 
- Small controller tweaks.
- Album controller JSON / XML feed fix.
- Updated list sortable columns to support ajax requests.

Release notes 0.4.4 (28th May, 2010)
- Update to Grails 1.3.1.
- Further PicasaService code coverage.
- Fix for defect GRAILSPLUGINS-2220.

Release notes 0.4.3 (16th May, 2010)
- Change PicasaService scope to "session".

Release notes 0.4.2 (16th May, 2010)
- Pagination float fix. 
- Fixed tag listing defect.
- Introduction of RSS feed for tag listing.
- Small CSS tweaks.

Release notes 0.4.1 (13th May, 2010)
- Update to Grails 1.3.0.
- Introduction of new config property rssManagingEditor.
- Photo RSS now builds a valid W3C feed, including RFC 882 and 3339 dates.
- README update.