@@ -1,0 +1,10 @@
+package uk.co.anthonycampbell.grails.plugins.picasa
+
+class PicasaCommentServiceService {
+
+    static transactional = true
+
+    def serviceMethod() {
+
+    }
+}
